--- a/.github/workflows/dev-deployment.yaml
+++ b/.github/workflows/dev-deployment.yaml
@@ -25,8 +25,12 @@ jobs:
       - name: Railway CLI
         run: npm install -g @railway/cli
       
-   
-      - name: Deploy to Railway
-        run: railway up
+      - name: Prisma Migrate
+        run:  railway run --service ${{ secrets.RAILWAY_SERVICES_ID }} npx prisma migrate dev
         env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_DEVELOP_TOKEN }}
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_DEV_TOKEN }}
+      
+      - name: Deploy to Railway
+        run: railway up --service ${{ secrets.RAILWAY_SERVICES_ID }}
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_DEV_TOKEN }}
